footer position changed to relative to fix the sidebar overlap issue on iPad

--- a/wp-content/themes/guny/src/scss/components/_footer.scss
+++ b/wp-content/themes/guny/src/scss/components/_footer.scss
@@ -18,6 +18,7 @@
 //
 // Styleguide 2.2
 .c-footer {
+  position: relative;
   background: $color-background-footer;
   color: $color-text-invert;
   padding: 60px 0;
